# yara-har

./: 0001-Add-initial-har_entry-module.patch  CMakeLists.txt  README.md  libyara-har.c  libyara-har.h  yara-har.c
examples/: chromium_www.google.com.har  firefox_www.google.com.har
mbedtls/: config.h
rules/: www.google.com.yara
